examples/errors/MultipleADTs.con
adt MyADT = MY | TYPE .

adt MyADT = OTHER .
